edit code done lan 1